added controllers, EmailService and EmailConfig, refactored services

--- a/testTask/src/main/resources/application.properties
+++ b/testTask/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useSSL
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+
+#Email Configuration
+spring.mail.host=smtp.yandex.by
+spring.mail.username=dealer-statistics@yandex.by
+spring.mail.password=doubleK
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
